# cosmic-vial-layer-display

./: .gitignore  LICENSE  README.md  find_keyboard.sh  flash.sh  install-applet.sh  quickstart.sh
.github/: dependabot.yml  release.yml
.github/workflows/: release.yml
applet/: Cargo.toml
applet/data/: config.toml.example  vial-layer.desktop
applet/src/: main.rs
firmware/: apply.sh  layer_report.c
udev/: 99-vial-hid.rules
