[package]
name = "vial-layer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vial-layer"
path = "src/main.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet", "wayland"] }
hidapi = "2.6"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = "s"
lto = true
